--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>
     <div class="container">
-        <div class="welcome-page">
+        <div class="welcome-page" class = "hide">
         <h2> Coding Quiz Challenge</h2>
         <h4> Try to answer the following code-related question with-in 
             the time limit. Keep in mind that incorrect answers will penalized
